examples/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - "*"
  http:
  - name: color
    route:
    - destination:
        host: istio-rollout-stable
      weight: 100
    - destination:
        host: istio-rollout-canary
      weight: 0
    match:
    - uri:
        exact: /color
  - name: index
    route:
    - destination:
        host: istio-rollout-stable
      weight: 100
    - destination:
        host: istio-rollout-canary
      weight: 0
    match:
    - uri:
        prefix: /
